Fix the broken Order row expand/collapse

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -60,6 +60,7 @@
   font-family: arial;
 }
 
+/** Adding CSSTransitionGroup breaks collapse/expand implementation try again when that is removed
 .newrow-enter > td {
     opacity: 0.1;
 }
@@ -69,6 +70,15 @@
   transition: opacity 2s cubic-bezier(0.68, -0.55, 0.27, 1.55)
 }
 
+.newrow-leave {
+  opacity: 1;
+}
+
+.newrow-leave.newrow-leave-active {
+  opacity: 0.01;
+  transition: opacity .5s ease-in;
+}
+*/
 input[type="file"].form-control {
   margin-top: .10em;
 }
